--- a/Dom.html
+++ b/Dom.html
@@ -7,15 +7,36 @@
 </head>
 <body>
     <h1></h1>
-    <div>
+    <div id="mydiv">
         <p>this is<strong>vishnu</strong></p>
-        <p>this is vishnu</p>
+        <p class="child">this is vishnu</p>
         <div>new element</div>
     </div>
     <script>
-        const data=document.getElementsByTagName("h1")
+       //Using DOM  basics//
+
+        //calling the html page//
+        console.log(document)
+
+        //adding message to idealtag H1//
+        const data=document.getElementsByTagName("h1")[0]
        data.innerHTML="it is good"
-       console.log(data.innerHTML)
+       console.log(data)
+    
+       //changing the message of present tag content//
+       const p=document.getElementsByClassName("child")[0]
+       p.textContent="old element"
+       console.log(p)
+
+       //creating child element in parent element//
+       const div=document.getElementsByTagName("mydiv")[0]
+       const newdiv=document.createElement("div")
+       newdiv.textContent="love is nice"
+       div.appendChild(newdiv)
+       console.log(div.innerHTML)
+        
+       //writing content in the webpage//
+       document.write("i love my slef")
     </script>
 </body>
 </html>
