--- a/Dom.html
+++ b/Dom.html
@@ -6,7 +6,7 @@
     <title>Dom</title>
 </head>
 <body>
-    <h1></h1>
+     <h1></h1>
     <div id="mydiv">
         <p>this is<strong>vishnu</strong></p>
         <p class="child">this is vishnu</p>
@@ -25,7 +25,7 @@
     
        //changing the message of present tag content//
        const p=document.getElementsByClassName("child")[0]
-       p.textContent="old element"
+       p.textContent="old element
        console.log(p)
 
        //creating child element in parent element//
@@ -37,6 +37,8 @@
         
        //writing content in the webpage//
        document.write("i love my slef")
-    </script>
+    </script> 
+
+    <script src="task.js"></script>
 </body>
 </html>
