--- a/Dom.html
+++ b/Dom.html
@@ -12,7 +12,7 @@
         <p class="child">this is vishnu</p>
         <div>new element</div>
     </div>
-    <script>
+    <script >
        //Using DOM  basics//
 
         //calling the html page//
@@ -25,20 +25,20 @@
     
        //changing the message of present tag content//
        const p=document.getElementsByClassName("child")[0]
-       p.textContent="old element
+       p.textContent="old element"
        console.log(p)
 
        //creating child element in parent element//
-       const div=document.getElementsByTagName("mydiv")[0]
-       const newdiv=document.createElement("div")
-       newdiv.textContent="love is nice"
-       div.appendChild(newdiv)
-       console.log(div.innerHTML)
+    //    const div=document.getElementsByTagName("mydiv")[0]
+    //    const newdiv=document.createElement("div")
+    //    newdiv.textContent="love is nice"
+    //    div.appendChild(newdiv)
+    //    console.log(div.innerHTML)
         
        //writing content in the webpage//
-       document.write("i love my slef")
+    //    document.write("i love my slef")
     </script> 
 
-    <script src="task.js"></script>
+   
 </body>
 </html>
