--- a/DOM_cards.html
+++ b/DOM_cards.html
@@ -17,13 +17,7 @@
                 flex-wrap: wrap;
                 gap: 20px;
             }
-            .card {
-                width: 300px;
-                border: 1px solid #ddd;
-                padding: 20px;
-                border-radius: 8px;
-                box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-            }
+            
             .card img {
                 width: 100%;
                 height:150px;
@@ -105,7 +99,7 @@
                         <span>Cost: ${item.cost}</span>
                     </div>
                 `;
-
+                card.setAttribute('style',' width: 300px;border: 1px solid #ddd;padding: 20px;border-radius: 8px;box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);')
                 container.appendChild(card);
             });
         }
